# rust-dhcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
arp/: Cargo.toml
arp/examples/: arp_probe.rs
arp/src/: lib.rs
client/: Cargo.toml
client/examples/: client.rs  inform.rs  init_reboot.rs  short_demo.rs
client/src/: builder.rs  client.rs  config.rs  dns.rs  lib.rs  netlink.rs  network.rs  ntp.rs  state.rs  utils.rs
client/tests/: integration_tests.rs
framed/: Cargo.toml
framed/src/: lib.rs  socket.rs
protocol/: Cargo.toml
protocol/src/v4/: deserializer.rs  hardware_type.rs  mod.rs  operation_code.rs  serializer.rs  validator.rs
server/: Cargo.toml
server/examples/: server.rs
server/src/: database.rs  lib.rs  storage.rs
