[package]
name = "dhcp-client"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
eui48 = "1.1"
hostname = "0.4"
rand = "0.8"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }
thiserror = "1.0"
env_logger = "0.11"
libc = "0.2"
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.18.0"
futures = "0.3.31"
netlink-packet-route = "0.25.1"

