[package]
name = "dhcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "0.4"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dhcp-protocol = { path = "../protocol" }
dhcp-framed = { path = "../framed" }

[target.'cfg(any(target_os="freebsd", target_os="macos"))'.dependencies]
netif-bpf = { git = "https://github.com/glebpom/rust-netif", rev="fb7e12930d472e5d25a0d43a4fe71aabac3f4ffd" }
ifcontrol = { git = "https://github.com/glebpom/rust-netif", rev="fb7e12930d472e5d25a0d43a4fe71aabac3f4ffd" }
eui48 = "1.1"
etherparse = "0.15"
arrayref = "0.3"

[target.'cfg(any(target_os="linux", target_os="windows"))'.dependencies]
dhcp-arp = { path = "../arp" }

[target.'cfg(target_os="windows")'.dependencies]
tokio-process = "0.2.2"

[dev-dependencies]
env_logger = "0.11"
tokio-test = "0.4"